[chromium] UUID generation does not work in Linux that has sandbox turned on https://bugs.webkit.org/show_bug.cgi?id=48571

Reviewed by Dmitry Titov.

This is because we cannot access /proc when sandbox is on. The fix is to
use random numbers to construct UUID.

* platform/UUID.cpp:
(WebCore::createCanonicalUUIDString):

Canonical link: https://commits.webkit.org/61341@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70830 268f45cc-cd09-0410-ab3c-d52691b4dbfc